--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.sql.init.mode=always
+
+spring.datasource.url=jdbc:postgresql://tyke.db.elephantsql.com/sszadwga
+spring.datasource.username=sszadwga
+spring.datasource.password=
